examples/008-Services/005-Service-LoadBalancer/sidecar-internal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidecar-internal-svc
spec:
  selector:
    app: sidecar
  ports:
  - port: 8080
    name: http-port
    targetPort: 80
