examples/008-Services/005-Service-LoadBalancer/sidecar-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidecar-svc-lb
spec:
  type: LoadBalancer
  selector:
    app: sidecar
  ports:
  - port: 8080
    name: http-port
    targetPort: 80
    nodePort: 30889
