examples/008-Services/005-Service-LoadBalancer/sidecar-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: sidecar-ingress
spec:
  rules:
  - host: sidecar.com
  http:
    paths:
    - backend:
      serviceName: sidecar-internal-svc
      servicePort: 8080
